Use JDK collections in ProvidesDescriptor instead of Guava collections